feat: add missing localization

--- a/src/localization/bg.json
+++ b/src/localization/bg.json
@@ -5,6 +5,8 @@
     "newsDetails": "подробности за новините",
     "langSettings": "езикови настройки",
     "searchPlaceHoder": "пиши тук",
-    "back":"обратно"
+    "back":"обратно",
+    "loadingError": "Опа! Новини не можаха да бъдат заредени",
+    "loading": "зареждане на новини..."
 
 }
