--- a/src/localization/bg.json
+++ b/src/localization/bg.json
@@ -7,6 +7,7 @@
     "searchPlaceHoder": "пиши тук",
     "back":"обратно",
     "loadingError": "Опа! Новини не можаха да бъдат заредени",
-    "loading": "зареждане на новини..."
+    "loading": "зареждане на новини...",
+    "noNewsItemError": "Опа! тази новина не можа да бъде намерена"
 
 }
